[metadata]
name = gruvboxify
version = 0.1.0
description = Convert images to the Gruvbox color palette
author = Aaron Millan
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaronmjz/gruvboxify.git
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    gruvboxify=gruvboxify.cli:main
